--- a/src/app/members/member-card/member-card.component.html
+++ b/src/app/members/member-card/member-card.component.html
@@ -25,7 +25,7 @@
       </button>
       <button 
         routerLink="/members/{{member.username}}"
-        [queryParams]="{tab: 'Messages'}"
+        [queryParams]="{tab: 3}"
         class="btn btn-light text-primary shadow-sm rounded-circle icon-btn"  title="Send Message">
         <i class="bi bi-envelope"></i>
       </button>
