--- a/src/app/members/member-detail/member-detail.component.html
+++ b/src/app/members/member-detail/member-detail.component.html
@@ -22,46 +22,29 @@
             </div>
             <div class="card-footer d-flex justify-content-between">
                 <button class="btn btn-primary">Like</button>
-                <button class="btn btn-success">Messages</button>
+                 <button (click)="selectTab(3)" class="btn btn-success">Message</button>
             </div>
         </div>
     </div>
 
     <div class="col-8">
-        <ul class="nav nav-tabs">
-            <li class="nav-item">
-                <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#about-tab" type="button">About</button>
-            </li>
-            <li class="nav-item">
-                <button class="nav-link" data-bs-toggle="tab" data-bs-target="#interests-tab" type="button">Interests</button>
-            </li>
-            <li class="nav-item">
-                <button class="nav-link" data-bs-toggle="tab" data-bs-target="#photos-tab" type="button">Photos</button>
-            </li>
-            <li class="nav-item">
-                <button class="nav-link" data-bs-toggle="tab" data-bs-target="#messages-tab" type="button">Messages</button>
-            </li>
-        </ul>
-        <div class="tab-content mt-3">
-            <div class="tab-pane fade show active" id="about-tab">
+        <tabset class="member-tabset" #memberTabs>
+            <tab heading="About {{member.knownAs}}" (selectTab)="onTabActivated($event)" >
                 <h4>Description</h4>
                 <p>{{member.introduction}}</p>
                 <h4>Looking for</h4>
                 <p>{{member.lookingFor}}</p>
-            </div>
-            <div class="tab-pane fade" id="interests-tab">
+            </tab>
+            <tab heading="Interests" (selectTab)="onTabActivated($event)" >
                 <h4>Interests</h4>
                 <p>{{member.interests}}</p>
-            </div>
-            <div class="tab-pane fade" id="photos-tab">
-                <h4>Photos</h4>
-                <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery"
-                style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
-            </div>
-            <div class="tab-pane fade" id="messages-tab">
-                <h4>Messages</h4>
-                <p>Message feature will go here.</p>
-            </div>
-        </div>
+            </tab>
+            <tab heading="Photos" (selectTab)="onTabActivated($event)" >
+                <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery"></ngx-gallery>
+            </tab>
+            <tab heading="Messages" (selectTab)="onTabActivated($event)" >
+                <app-member-messages [messages]="messages" [username]="member.username"></app-member-messages>
+            </tab>
+        </tabset>
     </div>
 </div>
